Fixed spacing around suggest link

--- a/root/static/css/style.css
+++ b/root/static/css/style.css
@@ -476,7 +476,7 @@ div.clearall {
 }
 
 #ferret-suggest-link, #ferret-cancel-children {
-  margin: 20px 0px 20px 0px;
+  margin: 10px 0px 10px 0px;
 }
 
 #gene-update {
